# editor-agent

./: .bumpversion.cfg  .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  VERSIONING.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: dependabot.yml  issue-labeler.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  greetings.yml  labeler.yml  stale.yml
migrations/: 001_initial_schema.sql
src/: main.py
src/agent/: nodes.py  service.py  state.py  tools.py  workflow.py
src/api/: routes.py  schemas.py
src/config/: settings.py
src/database/: __init__.py  client.py  models.py  schemas.py
src/utils/: exceptions.py  logging.py  middleware.py  monitoring.py
tests/: conftest.py  test_agent_nodes.py  test_agent_service.py  test_agent_state.py  test_agent_tools.py  test_agent_workflow.py  test_api_routes.py  test_api_schemas.py  test_config.py  test_database_client.py  test_database_models.py  test_database_schemas.py  test_main.py  test_utils_exceptions.py  test_utils_logging.py  test_utils_middleware.py  test_utils_monitoring.py
